# rdbinsight

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh_CN.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh_CN.md  codecov.yml  justfile  rustfmt.toml
.ai_code/: design.md  impl_parquet_top_prefix.md  plan.md
.github/actions/loc-badge/: README.md  action.yml  index.js  package.json  pnpm-lock.yaml
.github/actions/verify-version-consistency/: action.yml  check.sh  index.js
.github/workflows/: ci.yml  coverage.yml  deploy-pages.yml  ghcr-cleanup.yml  loc-badge.yml  publish-test-images.yml
dev/: docker-compose.yml  test-config.toml
docs/: USAGE.md  USAGE.zh_CN.md  integration-test-refactor-plan.md
examples/: cluster.toml  codis.toml  rdb_file.toml  redis_cluster.toml  sentinel.toml  standalone.toml
exmaples/: codis.toml  standalone.toml
sql/: 01_create_redis_records_raw.sql  02_create_import_batches_completed.sql  03_create_redis_records_view.sql
src/: config.rs  helper.rs  lib.rs  metric.rs  metrics.rs  parser.rs  record.rs  source.rs
src/helper/: proxy_connector.rs  sort_merge.rs
src/integration/: artifacts.rs  cluster_tests.rs  helpers.rs  listpack_tests.rs  meta_opcode_tests.rs  mod.rs  redis.rs  smoke.rs  trace.rs
src/integration/fixtures/: function_record.rs  mod.rs  record_expiry.rs  record_hash.rs  record_list.rs  record_set.rs  record_stream.rs  record_string.rs  record_zset.rs  simple_expiry.rs  simple_hash.rs  simple_list.rs  simple_set.rs  simple_stream.rs  simple_string.rs  simple_zset.rs
src/output/: abstractions.rs  clickhouse.rs  mod.rs  parquet.rs  sink.rs  types.rs
src/output/parquet/: mapper.rs  merge.rs  mod.rs  output.rs  path.rs  run_lz4.rs  schema.rs  v2.rs
src/parser/: buffer.rs  combinators.rs  definitions.rs  error.rs  item.rs  mod.rs  model.rs  rdb_file.rs  rdb_parsers.rs  record_function.rs  record_hash.rs  record_list.rs  record_module.rs  record_set.rs  record_string.rs  record_zset.rs  record_zset2.rs  registry.rs  state_parser.rs  trace.rs
src/parser/combinator/: choice.rs  mod.rs  primitive.rs  repeat.rs
src/parser/core/: buffer.rs  combinators.rs  cursor.rs  mod.rs  parse.rs  raw.rs  ring_buffer.rs
src/parser/record/: function.rs  hash.rs  list.rs  mod.rs  module.rs  set.rs  stream.rs  string.rs  zset.rs
src/parser/state/: combinators.rs  lzf.rs  mod.rs  traits.rs
src/parser/state/combinators/: rdb_str_box.rs  reduce.rs  seq.rs  skip_bytes.rs  varint.rs
src/report/: ch.rs  mod.rs  model.rs  parquet.rs  querier.rs
src/source/: cluster.rs  codis.rs  file.rs  mod.rs  rdb_file.rs  redis_stream.rs  standalone.rs
src/tests/: cases.rs  mod.rs  utils.rs
src/tests/cases/: hash.rs  list.rs  mod.rs  set.rs  stream.rs  string.rs  zset.rs
src/tests/image/: README.md  README.zh_CN.md
src/tests/redis/: config.rs  image.rs  instance.rs  mod.rs  version.rs
src/tests/utils/payload/: stream.rs  string.rs
src/tests/utils/redis/: config.rs  instance.rs  mod.rs
templates/: design.md  report.html  report.json
tests/: clickhouse_integration_test.rs  clickhouse_test.rs  delimiter_reader_test.rs  parquet_output_test.rs  parser_test.md  parser_test.rs  record_test.rs  report_test.rs  source_file_test.rs  source_standalone_test.rs  source_test.rs
tests/common/: Dockerfile  clickhouse.rs  mod.rs  parser_utils.rs  setup.rs  trace.rs  utils.rs
tests/fixtures/: README.md
tests/image/: Dockerfile  README.md  README.zh_CN.md
