[package]
name = "rdbinsight"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for parsing and analyzing Redis RDB."

default-run = "rdbinsight"

[dependencies]
anyhow = "1.0.98"
arrow = "56.0.0"
async-trait = "0.1.88"
async_async_io = "0.2.3"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive", "env"] }
clap_complete = "4.5.56"
clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs.git", features = [
    "time",
] } # relay on https://github.com/ClickHouse/clickhouse-rs/pull/250
crc = "3.0"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
human_format = "1.1.0"
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
lzf = "1.0.0"
memchr = "2.7.5"
num_cpus = "1.17.0"
num_enum = "0.7.3"
parquet = { version = "56.0.0", features = ["arrow", "async"] }
rand = "0.9.1"
redis = { version = "0.32.4", features = [
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
redis-protocol = { version = "6.0.0", features = ["codec"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_with = { version = "3.11.0", features = ["base64"] }
spire_enum = "0.6.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["time"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
] }
typed-builder = "0.21.0"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"
testcontainers = { version = "0.25.0", features = ["http_wait"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
