[package]
name = "rdbinsight"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for parsing and analyzing Redis RDB."

default-run = "rdbinsight"

[dependencies]
anyhow = "1.0.100"
arrow = "57.0.0"
async-trait = "0.1.89"
async_async_io = "0.2.3"
axum = "0.8.6"
backon = { version = "1.6.0", default-features = false, features = ["std"] }
base64 = { version = "0.22.1", features = ["alloc"] }
bytes = { version = "1.11.1", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_complete = "4.5.60"
clickhouse = { version = "0.14.0", features = ["time"] }
crc = "3.3.0"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
hyper-util = { version = "0.1.17", features = ["client-legacy"] }
itertools = "0.14.0"
lz4_flex = "0.12.0"
lzf = "1.0.0"
memchr = "2.7.6"
mimalloc = "0.1.48"
num_cpus = "1.17.0"
num_enum = "0.7.5"
parquet = { version = "57.0.0", features = ["arrow", "async"] }
prometheus = { version = "0.14.0", features = ["process"] }
rand = "0.10.0"
redis = { version = "1.0.3", features = [
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
redis-protocol = { version = "6.0.0", features = ["codec"] }
reqwest = { version = "0.13.2", features = ["json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_with = { version = "3.15.1", features = ["base64"] }
shadow-rs = "1.4.0"
spire_enum = "1.0.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
    "formatting",
    "parsing",
    "macros",
    "large-dates",
] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["time"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "local-time",
    "env-filter",
] }
typed-builder = "0.23.0"
url = { version = "2.5.7", features = ["serde"] }
wincode = { version = "0.4.1", features = ["derive"] }

[build-dependencies]
shadow-rs = "1.4.0"

[dev-dependencies]
tempfile = "3.23.0"
testcontainers = { version = "0.27.0", features = ["http_wait"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
